fix: web3 logo text from overflowing

--- a/src/components/logos/logos.css
+++ b/src/components/logos/logos.css
@@ -24,6 +24,12 @@
   font-size: 3rem;
 }
 
+@media (max-width: 780px) {
+  .web3-logo-text {
+    font-size: 2.3rem;
+  }
+}
+
 /*** Colors for different protocols ***/
 /* Web3 */
 .btn-main-web3 {
